syntax="proto3";
package dark_syster;

import "protos/base.proto";

option go_package = "/lib/pb";

service KeyValueService {
   rpc Ping(Empty) returns(Response);
   rpc Get(KeyRequest) returns(Response);
   rpc Set(KeyValueRequest) returns(Response);
   rpc StrLn(KeyRequest) returns(Response);
   rpc Del(KeyRequest) returns(Response);
   rpc Append(KeyValueRequest) returns(Response);
   rpc RequestLog(Empty) returns(Log);
}

message Response {
    optional string value = 1;
    optional string responseMsg = 2;
    optional Address redirectAddress = 3;
    optional STATUS status = 4;
    optional RaftNodeLog log = 5;
}

message Log {
    repeated string value = 1;
}

message KeyRequest {
    string key = 1;
}

message KeyValueRequest {
    string key      = 1;
    string value    = 2;
}
